syntax = "proto3";

package crescent.liquidstaking.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/crescent-network/crescent/x/liquidstaking/types";

// Params defines the set of params for the liquidstaking module.
message Params {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string liquid_bond_denom = 1 [(gogoproto.moretags) = "yaml:\"liquid_bond_denom\""];

  repeated WhitelistedValidator whitelisted_validators = 2
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"whitelisted_validators\""];

  // unstake_fee_rate specifies the ...
  string unstake_fee_rate = 3 [
    (gogoproto.moretags)   = "yaml:\"unstake_fee_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

  // commission_rate specifies the ...
  string commission_rate = 4 [
    (gogoproto.moretags)   = "yaml:\"commission_rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

  // Minimum number of coins to be staked to the active liquid validators on liquid staking.
  string min_liquid_staking_amount = 5 [
    (gogoproto.moretags)   = "yaml:\"min_liquid_staking_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"1000000\"",
      format: "sdk.Int"
  }];



}

// ValidatorStatus enumerates the status of a liquid validator.
enum ValidatorStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // VALIDATOR_STATUS_UNSPECIFIED defines the default status.
  VALIDATOR_STATUS_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "ValidatorStatusNil"];
  // VALIDATOR_STATUS_ACTIVE defines the ...
  VALIDATOR_STATUS_ACTIVE = 1 [(gogoproto.enumvalue_customname) = "ValidatorStatusActive"];
  // VALIDATOR_STATUS_DELISTING defines the ...
  VALIDATOR_STATUS_DELISTING = 2 [(gogoproto.enumvalue_customname) = "ValidatorStatusDelisting"];
  // VALIDATOR_STATUS_DELISTED defines the ...
  VALIDATOR_STATUS_DELISTED = 3 [(gogoproto.enumvalue_customname) = "ValidatorStatusDelisted"];
}

// WhitelistedValidator defines a ... TBD
message WhitelistedValidator {
  option (gogoproto.goproto_getters) = false;

  // validator_address defines the bech32-encoded address that whitelisted validator
  string validator_address = 1 [(gogoproto.moretags) = "yaml:\"validator_address\""];

  // weight specifies the weight for liquid staking, unstaking amount
  string weight = 2 [
    (gogoproto.moretags)   = "yaml:\"weight\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// LiquidValidator defines a ... TBD
message LiquidValidator {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // operator_address defines the address of the validator's operator; bech encoded in JSON.
  string operator_address = 1 [(gogoproto.moretags) = "yaml:\"operator_address\""];

  // status is the liquid validator status
  ValidatorStatus status = 2;

  // liquid tokens define the liquid staked tokens
  string liquid_tokens = 3
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];

  // weight specifies the weight for liquid staking, unstaking amount
  string weight = 4 [
    (gogoproto.moretags)   = "yaml:\"weight\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}
